--- a/public/picture-frame.html
+++ b/public/picture-frame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="frame-style.css">
     <title>Picture Frame</title>
 </head>
 <body>
@@ -19,6 +19,6 @@
         <div class="bottom-right corner"></div>
     </div>
     <div id="image-frame" class="fullscreen-image fadeIn"></div>
-    <script src="script.js"></script>
+    <script src="frame-script.js"></script>
 </body>
 </html>
